Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114178

Transparency in gradient results in weird stripes

XMLWordPrintable

    • 098131c15 (dev), 201b454b7 (6.6), 40ec5814a (6.5)

      To reproduce, run attached example. The heightmap is drawn as shown in attached screenshot.

        1. qtbug114178.zip
          814 kB
          Joni Poikelin
        2. Screenshot from 2023-06-02 13-28-09.png
          858 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-114178
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes