Document the lack of support for transparency

Pick-to: 6.5 6.6
Fixes: QTBUG-114178
Change-Id: I4316135b4c96cafa28cf813621cff9803e6e2790
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>